--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -4,24 +4,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    vertical-align: baseline
+    vertical-align: baseline;
 }
 html {
     scroll-behavior: smooth;
 }
 html, body {
     height: 100%;
-    width: 100%
+    width: 100%;
 }  
 ul, li, a {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    text-decoration: none
+    text-decoration: none;
 }    
 input, button {
     background-color: transparent;
-    border: 0
+    border: 0;
 }
 img, picture, video, iframe, figure {
     max-width: 100%;
@@ -38,9 +38,9 @@ h1, h2, h3, h4, h5, h6, p,span, a, strong, blockquote, i, b, u, em {
 form, input, textarea, select, button, label {
     font-family: inherit;
     font-size: inherit;
+    display: block;
     hyphens: auto;
     background-color: transparent;
-    display: block;
     color:inherit;
     appearance: none;
 }
