--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -15,5 +15,9 @@
 // Layouts
 @forward 'layouts/header';
 @forward 'layouts/sidebar';
+@forward 'layouts/slider';
+@forward 'layouts/nav';
+@forward 'layouts/banner';
+@forward 'layouts/bienvenida';
 
 // Secciones
