--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,6 +11,7 @@
 // Componentes
 @forward 'components/buttons';
 @forward 'components/icons';
+@forward 'components/indicators';
 
 // Layouts
 @forward 'layouts/header';
@@ -19,5 +20,6 @@
 @forward 'layouts/nav';
 @forward 'layouts/banner';
 @forward 'layouts/bienvenida';
+@forward 'layouts/avisos';
 
 // Secciones
