--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -52,7 +52,8 @@ $images: (
     'header-background': '../images/plaza-salamanca.webp',
     'banner-contact': '../images/banner-contacto.webp',
     'banner-procedure': '../images/banner-tramites.webp',
-    'banner-mayor': '../images/banner-tramites.webp',
+    'banner-alert': '../images/banner-avisos.webp',
+    'banner-mayor': '../images/alcalde-salamanca.webp',
     'footer-image': '../images/fachada-oager.webp',
     'footer-certification9001': '../images/ISO-9001.webp',
     'footer-certification27001': '../images/ISO-27001.webp'
