--- a/src/assets/scss/layouts/_bienvenida.scss
+++ b/src/assets/scss/layouts/_bienvenida.scss
@@ -76,15 +76,17 @@
         color: rgba(var.getColor('color-light'), 0.8);
         @include mx.createGrid(20px,auto, 60% 40%) {
             width: 100%;
-            align-items: center;
         }; 
     }
 
     &__discurso {
+        padding-top: fn.pxTorem(16px);
+         
         h2 {
             font-size: var.getTypography('xxl');
             color: var(--color-primary);
         }
+        
         &-texto {
             padding-bottom: fn.pxTorem(20px); 
             padding-top: fn.pxTorem(30px); 
