--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -21,5 +21,6 @@
 @forward 'layouts/banner';
 @forward 'layouts/bienvenida';
 @forward 'layouts/avisos';
+@forward 'layouts/secciones';
 
 // Secciones
