--- a/src/assets/scss/layouts/_avisos.scss
+++ b/src/assets/scss/layouts/_avisos.scss
@@ -7,12 +7,16 @@
     margin-top: fn.pxTorem(-56px);
     background-color: var(--color-background-primary);
 
+    h2 {
+        display: none;
+    }
+
     &__tabs {
         margin-left: fn.pxTorem(350px);
         text-transform: uppercase;
         @include mx.createFlex(row, flex-start, center, auto) {
             gap: fn.pxTorem(16px);
-        };
+        };        
 
         &-item {            
             border-top-left-radius: 5px;
@@ -22,7 +26,8 @@
             background-color: var(--color-light);            
             cursor: pointer;
 
-            &--active {
+            &--active,
+            &:hover {
                 color: var(--color-primary);
             }
             &--no-active {                
@@ -85,6 +90,7 @@
             border-right: 5px solid var(--color-background-primary);
             border-bottom-left-radius: 5px;
             border-bottom-right-radius: 5px;
+            box-shadow: 0px 0px 30px 0px rgb(0 0 0 / 7%);
             @include mx.createFlex(column, flex-start, flex-start);
         }
 
@@ -112,6 +118,7 @@
 
     &__indicator {
         grid-area: indicator;
+        padding-bottom: fn.pxTorem(16px); 
         @include mx.createFlex(row, center, flex-start);
     }
 
