Creación sección oficinas

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -22,5 +22,6 @@
 @forward 'layouts/bienvenida';
 @forward 'layouts/avisos';
 @forward 'layouts/secciones';
+@forward 'layouts/mapa';
 
 // Secciones
