--- a/src/assets/scss/layouts/_avisos.scss
+++ b/src/assets/scss/layouts/_avisos.scss
@@ -12,7 +12,7 @@
     }
 
     &__tabs {
-        margin-left: fn.pxTorem(350px);
+        margin-left: 20%;
         text-transform: uppercase;
         @include mx.createFlex(row, flex-start, center, auto) {
             gap: fn.pxTorem(16px);
@@ -37,7 +37,7 @@
     }
 
     &__container {
-        margin-left: fn.pxTorem(350px);
+        margin-left: 20%;
         background-color: var(--color-light);
         @include mx.createGrid(0px, 
                                 repeat(3, auto),
@@ -46,7 +46,7 @@
                                 'notificacion'
                                 'indicator') {
             height: max-content;
-            width: calc(100% - fn.pxTorem(350px));
+            width: calc(100% - 20%);
         };
     }
 
