--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -10,9 +10,11 @@ $palette: (
     'color-background-secondary': #616373,
     'color-background-terciary': #fff,
     'color-background-cards': #f6f6f6,
+    'color-background-map': #e6e6e6,
     'color-title': #1e2a3b,
     'color-text': #616373,
     'color-border': #e6e6ea,
+    'color-border-map': #8b8b8b,
     'color-icon': #8e91a2,
     'color-light': #fff,
     'color-dark': #202130,
@@ -85,9 +87,11 @@ $images: (
     --color-background-secondary: #{getColor('color-background-secondary')};
     --color-background-terciary: #{getColor('color-background-terciary')};
     --color-background-cards: #{getColor('color-background-cards')};
+    --color-background-map: #{getColor('color-background-map')};
     --color-title: #{getColor('color-title')};
     --color-text: #{getColor('color-text')};
     --color-border: #{getColor('color-border')};
+    --color-border-map: #{getColor('color-border-map')};
     --color-icon: #{getColor('color-icon')};
     --color-light: #{getColor('color-light')};
     --color-dark: #{getColor('color-dark')};
