Creación del footer

--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -22,11 +22,11 @@
 }
 
 .slider-banner__button {
-    &--prev {
+    &--anterior {
         grid-area: prev;
     }
 
-    &--next {
+    &--siguiente {
         grid-area: next;
     }
 }
