--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -7,13 +7,17 @@
     @include mx.createFlex(column, flex-start, flex-start);
 
     &__sidebar {      
-        height: fn.pxTorem(50px);
         padding: 0 fn.pxTorem(100px); 
         background-color: var(--color-background-primary);
         color: rgba(var.getColor('color-light'), 0.8);
         @include mx.createGrid(20px,auto,auto 1fr) {
             width: 100%;
         };
+        @include mx.addBreakpoint('large') {
+            @include mx.createFlex(column, center, center) {
+                padding: 0;
+            };
+        }
     }
 
     &__slider {   
@@ -27,5 +31,13 @@
                                     rgba(var.getColor('color-background-primary'), 0.7),
                                     var.getImageURL('header-background'),
                                     cover);
+        @include mx.addBreakpoint('medium') {
+            align-items: center;
+            padding: 0 fn.pxTorem(50px) fn.pxTorem(100px);
+        }
+        @include mx.addBreakpoint('small') {
+            align-items: center;
+            padding: 0 fn.pxTorem(30px) fn.pxTorem(100px);
+        }
     }
 }
