--- a/src/assets/scss/layouts/_bienvenida.scss
+++ b/src/assets/scss/layouts/_bienvenida.scss
@@ -6,6 +6,12 @@
 .bienvenida {
     padding: 0 fn.pxTorem(100px); 
     background-color: var(--color-background-primary);
+    @include mx.addBreakpoint('medium') {
+        padding: 0 fn.pxTorem(50px); 
+    }
+    @include mx.addBreakpoint('small') {
+        padding: 0 fn.pxTorem(30px); 
+    }
 
     .accesos-directos {
         padding: fn.pxTorem(16px);
@@ -13,15 +19,47 @@
         text-align: center;
         @include mx.addNeo(5px, var(--color-light), 3px);
         @include mx.createFlex(row, center, flex-start);
+        @include mx.addBreakpoint('large') {
+            flex-direction: column;
+            padding: 0;
+            transform: translateY(-20%);
+            @include mx.createPseudoelement(before) {
+                background: var(--color-light);
+                width: fn.pxTorem(80px);
+                height: fn.pxTorem(80px);
+                right: 50px;
+                top: -40px;
+                border-radius: 4px;
+                transform: rotate(45deg);
+                z-index: -1;
+            }
+            @include mx.createPseudoelement(after) {
+                background: var(--color-primary);
+                width: fn.pxTorem(80px);
+                height: fn.pxTorem(80px);
+                right: 50px;
+                top: -50px;
+                border-radius: 4px;
+                transform: rotate(45deg);
+                z-index: -2;
+            }
+        }
 
         &:hover .accesos-directos__item {
             filter:blur(2px);
             transform: scale(.98);
+            @include mx.addBreakpoint('large') {
+                filter:blur(0px);
+                transform: scale(1);
+            }
         }
 
         &:hover .accesos-directos__item:hover {
             filter:blur(0px);
             transform: scale(1.1);
+            @include mx.addBreakpoint('large') {
+                transform: scale(1);
+            }
         }
 
         &__item {
@@ -29,9 +67,16 @@
             height: max-content;
             min-width: fn.pxTorem(150px);
             width: 100%;
+            @include mx.addBreakpoint('large') {
+                margin: 0;                
+                border-bottom: 1px solid var(--color-border);
 
-            &:hover {
-                
+                &:last-child {
+                    border-bottom: none;
+                }
+            }
+
+            &:hover {                
                 @include mx.addTransition(transform);
             }
         }
@@ -41,6 +86,28 @@
             @include mx.createFlex(column, center, center)  {
                 gap: fn.pxTorem(16px);
             };
+            @include mx.addBreakpoint('large') {
+                @include mx.createGrid(16px,
+                                        auto,
+                                        35% 1fr) {
+                    width: 100%;
+                };
+
+                &:hover .accesos-directos__container-icon {
+                    background-color: var(--color-primary);
+                }    
+                
+                &:hover .accesos-directos__icon {
+                    color: var(--color-light);
+                }
+
+                &:hover > span {
+                    color: var(--color-primary);
+                }
+            }
+            @include mx.addBreakpoint('small') {
+                grid-template-columns: 1fr; 
+            }
         }
 
         &__container-icon {
@@ -54,6 +121,9 @@
                 border-radius: 4px;
                 transform: rotate(45deg);
                 z-index: -1;
+                @include mx.addBreakpoint('large') {
+                    display: none;
+                }
             }
             @include mx.createPseudoelement(after) {
                 background: var(--color-primary);
@@ -64,11 +134,31 @@
                 border-radius: 4px;
                 transform: rotate(45deg);
                 z-index: -2;
+                @include mx.addBreakpoint('large') {
+                    display: none;
+                }
+            }
+            @include mx.addBreakpoint('large') {
+                justify-self: center;
+                align-self: center;
+                padding: fn.pxTorem(16px); 
+                width: 100%;               
+            }
+            @include mx.addBreakpoint('small') {
+                display: none;
             }
         }
 
         &__text {
             text-transform: capitalize;
+            @include mx.addBreakpoint('large') {
+                text-transform: uppercase;
+                justify-self: flex-start;
+            }
+            @include mx.addBreakpoint('small') {
+                justify-self: center;
+                padding: fn.pxTorem(16px);
+            }
         }
     }
 
